--- a/Ntk_blog-master/Dockerfile
+++ b/Ntk_blog-master/Dockerfile
@@ -1,11 +1,5 @@
 FROM python
-
-WORKDIR /app
-
+ENV PYTHONUNBUFFERED=1
+WORKDIR /django
 COPY requirements.txt requirements.txt
-
 RUN pip install -r requirements.txt
-
-COPY . .
-
-CMD [ "python","manage.py","runserver","0.0.0.0:8000" ]
