--- a/Ntk_blog-master/docker-compose.yml
+++ b/Ntk_blog-master/docker-compose.yml
@@ -9,3 +9,14 @@ services:
     image: app:django
     container_name: django_contatiner
     command: python manage.py runserver 0.0.0.0:8000
+  
+  nginx:
+    build: ./nginx
+    volumes:
+      - .:/django
+    image: nginx
+    container_name: nginx_container
+    ports:
+      - 8002:8002
+    depends_on:
+      - app
